<resources>
    <string name="app_name">Android Programming</string>
    <string name="email_input">Email</string>
    <string name="username_input">Username</string>
    <string name="password_input">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="signup_button">SIGNUP</string>
    <string name="register_text">REGISTER</string>
    <string name="update_text">UPDATE PROFILE</string>
    <string name="change_button">CHANGE USER INFO</string>
    <string name="user_info">User Info</string>
    <string name="gyms_button">Find Your Gym</string>
    <string name="load_gyms_button">Load Gyms</string>
    <string name="register_title">Create User</string>
</resources>

