<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    >
    <LinearLayout
        android:paddingTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/text_register_title"
            android:textColor="#fff"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:layout_gravity="center"
            android:textSize="30sp" />

        <EditText
        android:id="@+id/text_create_email"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittextstyle"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/email_input" />

    <EditText
        android:id="@+id/text_create_username"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittextstyle"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/username_input" />

        <EditText
            android:id="@+id/text_create_password"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittextstyle"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="@string/password_input" />

        <Button
            android:id="@+id/button_create"
            android:textColor="#fff"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:background="@drawable/buttonstyleselector"
            android:text="@string/register_text" />
        />
</LinearLayout>
</RelativeLayout>

