<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fitnessbackground"
    >
    <LinearLayout
        android:paddingTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/usernameTextView"
            android:textColorHint="#fff"
            android:background="@drawable/edittextstyle"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="@string/username_input" />
        <EditText
            android:id="@+id/passwordTextView"
            android:textColorHint="#fff"
            android:background="@drawable/edittextstyle"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="@string/password_input" />
            />

        <Button
            android:id="@+id/button_login"
            android:onClick="LoginUser"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/buttonstyleselector"
            android:text="@string/login_button"
            android:textColor="#fff" />

        <Button
            android:id="@+id/button_signup"
            android:onClick="SignupUser"
            android:textColor="#fff"
            android:background="@drawable/buttonstyleselector"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:text="@string/signup_button"
            android:layout_height="60dp" />
    </LinearLayout>


</RelativeLayout>