<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:paddingTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <EditText
        android:id="@+id/text_create_email"
        android:textColorHint="#000"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/email_input" />
    <EditText
        android:id="@+id/text_create_username"
        android:textColorHint="#000"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/username_input" />
        <EditText
            android:id="@+id/text_create_password"
            android:textColorHint="#000"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="@string/password_input" />

        <Button
            android:id="@+id/button_create"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/create_button" />
        />
</LinearLayout>
</RelativeLayout>